@@ -1,4 +1,6 @@
 
+  * Added support for wavpack files
+  * Added option to embed album cover to all album tracks
   * Playlist panel now allow to select multiple playlists
   * Added an option to dont follow symbolic lyncs while doing the scanning. ( Thanks symphom )
   * Added an option to dont search for embedded covers in audio files
